src/client/styles/_landing-page.scss
.landing-page {
  a {
    color: $primary;
    text-decoration: none;
    font-weight: 600;
    &.button {
      font-size: 1.1rem;
      color: white !important;
      margin: 0;
      font-weight: 600;
    }
  }

  .navigation {
    width: 100%;
    height: 80px;
    display: flex;
    align-items: center;
    border-bottom: 1px solid $note-sidebar-color;

    .container {
      width: 100%;
      display: flex;
      justify-content: space-between;
    }

    .brand {
      display: flex;
      align-items: center;

      .brand-icon {
        max-width: 30px;
        margin-right: 1rem;

        @include small-breakpoint {
          max-width: 40px;
        }
      }

      span {
        font-weight: 700;
        font-size: 1.1rem;

        @include small-breakpoint {
          font-size: 1.2rem;
        }
      }
    }

    .menu {
      display: flex;
      align-items: center;

      a {
        display: flex;
        font-size: 1.1rem;
        color: rgba(0, 0, 0, 0.5);
        font-weight: 500;
        text-decoration: none;
        &:first-of-type {
          display: none;

          @include small-breakpoint {
            display: block;
            margin-right: 1.5rem;
          }
        }

        &:hover {
          color: rgba(0, 0, 0, 0.6);
        }
      }
    }
  }

  .content {
    padding: 2rem 0;
    background: lighten($note-sidebar-color, 5%);
    border-bottom: 1px solid $note-sidebar-color;

    @include small-breakpoint {
      padding: 4rem 0;
    }

    .lead {
      text-align: center;
    }

    h1 {
      margin-top: 0;
      font-weight: 700;
      font-size: 2rem;
      line-height: 1.1;
      letter-spacing: -0.03rem;

      @include small-breakpoint {
        font-size: 3.5rem;
      }
    }

    .subtitle {
      color: #888;
      line-height: 1.6;
      font-size: 1.2rem;
      margin: 1rem auto 1.5rem;

      @include small-breakpoint {
        font-size: 1.4rem;
      }
    }

    .cta {
      margin-bottom: 2rem;
    }
  }

  .container {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 1.5rem;
    &-small {
      @extend .container;
      max-width: 600px;
    }
  }

  .screenshot {
    max-width: 100%;
    height: auto;
  }

  .features {
    display: flex;
    flex-wrap: wrap;

    div {
      flex: 0 0 100%;

      @include small-breakpoint {
        padding: 0 1.5rem;
        flex: 0 0 50%;
      }
    }

    h2 {
      font-weight: 700;
      font-size: 1.4rem;

      @include small-breakpoint {
        font-size: 2rem;
      }
    }

    p {
      line-height: 1.6;
      color: lighten($font-color, 15%);
      font-size: 1.1rem;

      @include small-breakpoint {
        font-size: 1.3rem;
      }
    }
  }

  .footer {
    background: $primary;
    padding: 2rem 0;
    text-align: center;
    color: white;

    @include small-breakpoint {
      padding: 4rem 0;
    }

    .logo {
      display: block;
      margin: 0 auto;
      height: 50px;
      width: 50px;
      margin-bottom: 2rem;

      @include small-breakpoint {
        height: 100px;
        width: 100px;
        margin-bottom: 4rem;
      }
    }

    a {
      color: rgba(255, 255, 255, 0.8);
      &:hover {
        color: white;
      }
    }

    nav {
      display: flex;
      align-items: center;
      justify-content: center;
      margin-bottom: 1.5rem;

      a {
        margin: 0 0.75rem;
      }
    }
  }
}

